# sieci-mini-zadanie-8

./: CMakeLists.txt  Makefile  client.c  err.c  przeczytaj-mnie.html  server.c
